feat: melhorias docs api get bucket url
